--- a/.travis.yml
+++ b/.travis.yml
@@ -61,6 +61,7 @@ script:
 
 after_success:
   - travis_retry php vendor/bin/coveralls
+  - bash <(curl -s https://codecov.io/bash)
 
 notifications:
     on_success: never
