--- a/composer.json
+++ b/composer.json
@@ -36,5 +36,8 @@
         "phpunit/phpcov": "^3.1",
         "phpunit/phpunit": "^5.7"
     },
-    "scripts": { "post-install-cmd": [ "sh scripts/sassphp_install.sh" ]
+    "scripts": { "post-install-cmd": [ "sh scripts/sassphp_install.sh" ] },
+    "replace": {
+        "abm/sassphp": "self.version"
+      }
 }
